<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- VersionInfo -->
    <integer name="version_info_counter">0</integer>
    <string name="version_info">
        New Version:
        \n\n•
    </string>

    <!-- View Report Activity -->
    <string name="view_report">View Reported Problem</string>
    <string name="view_report_notification_dummy">2 new comments on your reported problem: Defective Elevator Königsplatz</string>

    <!-- Answer Survey Activity -->
    <string name="answer_surveys">Answer Surveys</string>
    <string name="answer_surveys_new_available">New Survey Available</string>
    <string name="answer_surveys_new_available_action">Answer Now</string>

    <!-- Report A Problem Activity -->
    <string name="report_problem">Report a Problem</string>
    <string name="report_problem_category">Category</string>
    <string name="report_problem_category_action">Choose Category</string>
    <string name="report_problem_location">Location</string>
    <string name="report_problem_location_map">Choose on Map</string>
    <string name="report_problem_photos">Photos (optional)</string>
    <string name="report_problem_photos_add">Add Photo</string>
    <string name="report_problem_photos_no_camera">No Camera Application was found</string>
    <string name="report_problem_photos_error">Error while taking and storing photo</string>
    <string name="report_problem_photos_delete">Delete this picture?</string>
    <string name="report_problem_description">Description (optional)</string>
    <string name="report_problem_description_hint">Problem Description</string>
    <string name="report_problem_action">Send Report</string>
    <string name="report_problem_missing">Please add the missing information</string>
    <string name="report_problem_success">Thanks for your report!</string>
    <!-- Main categories -->
    <array name="report_problem_category_items">
        <item>Public Transportation Issues</item>
        <item>Road Conditions</item>
        <item>Pedestrian Concerns</item>
        <item>Bicycle Infrastructure</item>
        <item>Traffic Management</item>
        <item>Accessibility Issues</item>
        <item>Environmental Factors</item>
        <item>Safety and Security</item>
        <item>Feedback</item>
        <item>Other or General</item>
    </array>
    <!-- Public Transportation Issues subcategories -->
    <array name="report_problem_category_public_transportation_issues_items">
        <item>Train delays</item>
        <item>Bus disruptions</item>
        <item>Subway/metro problems</item>
        <item>Tram issues</item>
        <item>Accessibility (e.g., lack of ramps, elevators)</item>
    </array>
    <!-- Road Conditions subcategories -->
    <array name="report_problem_category_road_conditions_items">
        <item>Potholes</item>
        <item>Missing road signs</item>
        <item>Poor road surface</item>
        <item>Blocked lanes or roads</item>
    </array>
    <!-- Pedestrian Concerns subcategories -->
    <array name="report_problem_category_pedestrian_concerns_items">
        <item>Unsafe crossings</item>
        <item>Insufficient sidewalks</item>
        <item>Pedestrian safety issues</item>
    </array>
    <!-- Bicycle Infrastructure subcategories -->
    <array name="report_problem_category_bicycle_infrastructure_items">
        <item>Missing bike lanes</item>
        <item>Bike lane obstacles</item>
        <item>Unsafe cycling conditions</item>
    </array>
    <!-- Traffic Management subcategories -->
    <array name="report_problem_category_traffic_management_items">
        <item>Traffic congestion</item>
        <item>Signal malfunctions</item>
        <item>Confusing road markings</item>
    </array>
    <!-- Accessibility Issues subcategories -->
    <array name="report_problem_category_accessibility_issues_items">
        <item>Lack of disabled access</item>
        <item>Inadequate facilities for people with disabilities</item>
        <item>Accessibility challenges for seniors</item>
    </array>
    <!-- Environmental Factors subcategories -->
    <array name="report_problem_category_environmental_factors_items">
        <item>Pollution concerns (air, noise, etc.)</item>
        <item>Lack of green spaces</item>
        <item>Environmental hazards impacting mobility</item>
    </array>
    <!-- Safety and Security subcategories -->
    <array name="report_problem_category_safety_and_security_items">
        <item>Crime or safety concerns at transportation hubs</item>
        <item>Poorly lit areas</item>
        <item>Vandalism or graffiti affecting mobility</item>
    </array>
    <!-- Feedback subcategories -->
    <array name="report_problem_category_feedback_items">
        <item>Suggestions for improvement</item>
        <item>Commuter feedback and ideas</item>
        <item>Positive experiences</item>
    </array>
    <!-- Other/General subcategories -->
    <array name="report_problem_category_other_or_general_items">
        <item>Anything not covered in the other categories</item>
    </array>

    <!-- Maps Activity -->
    <string name="maps_title">Position auswählen</string>
    <string name="maps_action">Auswählen</string>
    <string name="maps_info">Lat: %1$s\nLon: %2$s\nZoom: %3$s</string>
    <string name="maps_no_location_permission">Location permission denied. Cannot show current location.</string>

    <!-- Mobility Injustice Atlas -->
    <string name="atlas">Mobility Injustice Atlas</string>
    <string name="atlas_url">http://accessibility-atlas.de/</string>

    <!-- GENERAL -->
    <string name="app_name">JustFairMobility</string>
    <string name="app_name_split">JustFair\nMobility</string>
    <string name="app_name_icon">@string/app_name</string>
    <string name="separation_doubles">,</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="success">Success</string>
    <string name="view">View</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="invalid">Invalid</string>
    <string name="hint">Hint</string>
    <string name="needed">Needed</string>
    <string name="sync">Synchronise</string>
    <string name="sync_start">Synchronization started</string>
    <string name="sync_success">Synchronization successful</string>
    <string name="search">Search</string>
    <string name="inDevelopment">This feature is in development</string>
    <string name="unknown">Unknown</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="back_confirmation">Back?</string>
    <string name="back_confirmation_text">All changes will be lost!</string>
    <string name="back_confirmation_action">Back</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_google_sign_in_unavailable">Google Sign In not available</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_host">No internet connection or unknown host</string>
    <string name="error_no_permission">No permission</string>
    <string name="error_network">Network error</string>
    <string name="error_connection">Connection error</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_ssl">Wrong SSL Certificate</string>
    <string name="error_http_401">Http - 401 - no access</string>
    <string name="error_password">Wrong Password</string>
    <string name="error_invalid_otp">Invalid Code</string>
    <string name="error_invalid_user">User not existing</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_activity_not_found">Found no app to open</string>
    <string name="sort">Sorting</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="sort_create_asc">Date of creation\n(Oldest first)</string>
    <string name="sort_create_desc">Date of creation\n(Newest first)</string>
    <string name="sort_user">Own ordering</string>
    <string name="sort_user_explanation">Use drag and drop</string>
    <string name="sort_no_entries">No entries</string>
    <string name="settings">Settings</string>
    <string name="digits_high_low_num">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="digits_low_num">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="digits_num" tools:keep="@string/digits_num">0123456789</string>


    <!-- TIMES -->
    <string name="defaultDateFormatWithYear">d.MM.yyyy</string>
    <string name="defaultDateFormatWithoutYear">d. MMM</string>
    <string name="separation_time">:</string>
    <string name="am" translatable="false">am</string>
    <string name="pm" translatable="false">pm</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day" tools:keep="@string/day">Tag</string>
    <plurals name="day" tools:keep="@plurals/day">
        <item quantity="one">@string/day</item>
        <item quantity="other">Days</item>
    </plurals>
    <string name="week" tools:keep="@string/week">Week</string>
    <plurals name="week" tools:keep="@plurals/week">
        <item quantity="one">@string/week</item>
        <item quantity="other">Weeks</item>
    </plurals>
    <string name="month" tools:keep="@string/month">Month</string>
    <plurals name="month" tools:keep="@plurals/month">
        <item quantity="one">@string/month</item>
        <item quantity="other">Months</item>
    </plurals>
    <string name="year" tools:keep="@string/year">Year</string>
    <plurals name="year" tools:keep="@plurals/year">
        <item quantity="one">@string/year</item>
        <item quantity="other">Years</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">Second</item>
        <item quantity="other">Seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="error_minDate" tools:keep="@string/error_minDate">The date was changed to the smallest possible: %s</string>
    <string name="error_maxDate" tools:keep="@string/error_maxDate">The date was changed to the largest possible: %s</string>
    <string name="selectDate">Choose date</string>

    <!-- TEXT WATCHER -->
    <string name="error_missingText">Needed</string>
    <string name="error_wrongValue">Invalid value</string>

</resources>