<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:textAlignment="textStart">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            style="@style/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple_pressed_oval_white"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            app:srcCompat="@drawable/icon_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/title"
            style="@style/textHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:text="@string/report_problem"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extraLarge"
            android:layout_marginEnd="@dimen/extraLarge"
            android:elevation="100dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/content"
            style="@style/cardViewSurface"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/small">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large"
                        style="@style/textSubhead"
                        android:text="@string/report_problem_category">
                    </TextView>

                    <Button
                        android:id="@+id/category"
                        style="@style/buttonSelectedOnSurface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginRight="@dimen/large"
                        android:text="@string/report_problem_category_action"/>

                    <androidx.cardview.widget.CardView style="@style/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large"
                        style="@style/textSubhead"
                        android:text="@string/report_problem_location">
                    </TextView>

                    <Button
                        android:id="@+id/location"
                        style="@style/buttonSelectedOnSurface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginRight="@dimen/large"
                        android:text="@string/report_problem_location_map"/>

                    <androidx.cardview.widget.CardView style="@style/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large"
                        style="@style/textSubhead"
                        android:text="@string/report_problem_photos">
                    </TextView>

                    <Button
                        android:id="@+id/photos"
                        style="@style/buttonSelectedOnSurface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginRight="@dimen/large"
                        android:text="@string/report_problem_photos_add"/>

                    <LinearLayout
                        android:id="@+id/photosContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginBottom="@dimen/small"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginTop="@dimen/small"
                            android:visibility="gone"
                            app:srcCompat="@android:mipmap/sym_def_app_icon"
                            tools:visibility="visible" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginTop="@dimen/small"
                            android:visibility="gone"
                            app:srcCompat="@android:mipmap/sym_def_app_icon"
                            tools:visibility="visible" />

                    </LinearLayout>

                    <androidx.cardview.widget.CardView style="@style/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/large"
                        style="@style/textSubhead"
                        android:text="@string/report_problem_description">
                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionLayout"
                        style="@style/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginBottom="@dimen/large">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            style="@style/textInputMultipleLines"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/report_problem_description_hint" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView style="@style/separator" />

                    <Button
                        android:id="@+id/send"
                        style="@style/buttonMainAction"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="@dimen/large"
                        android:layout_marginTop="@dimen/small"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginBottom="@dimen/large"
                        android:text="@string/report_problem_action" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>